# insight

./: .gitignore  CHANGELOG.md  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.agent/: AGENT.md
backend/: .env.n8n.example  README.md  package-lock.json  package.json  wa-bridge.js
backend/n8n/: README.md  api.md  internal.md  schema_db.md  source.md
backend/scripts/: api_smoke_test.sh
frontend/: .env.example  README.md  index.html  metadata.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
n8n/: README.md  api.md  architecture.md  frontend_api_spec.md  internal.md  schema_db.md  source.md
n8n/data/: README.md
n8n/fixtures/: 00_email_trigger_raw.json  (+3 more)
scripts/: local_deploy_runbook.sh
src/: config.ts  index.ts  types.ts
wa-auth/: app-state-sync-key-AAAAAGsX.json  app-state-sync-key-AAAAAGsY.json  creds.json  pre-key-103.json  pre-key-106.json  pre-key-108.json  pre-key-111.json  pre-key-112.json  pre-key-113.json  pre-key-117.json  pre-key-118.json  pre-key-120.json  pre-key-123.json  pre-key-125.json  pre-key-126.json  pre-key-128.json  pre-key-129.json  pre-key-132.json  pre-key-133.json  pre-key-135.json  pre-key-136.json  pre-key-137.json  pre-key-138.json  pre-key-14.json  pre-key-140.json  pre-key-145.json  pre-key-149.json  pre-key-150.json  pre-key-151.json  pre-key-152.json  pre-key-153.json  pre-key-159.json  pre-key-160.json  pre-key-161.json  pre-key-163.json  pre-key-165.json  pre-key-166.json  pre-key-169.json  pre-key-170.json  pre-key-172.json  (+681 more)
(+64 files in other folders)
