[project]
name = "insight"
version = "0.1.0"
description = "Hackathon Team 7 - Challenge 2: Clean Communication"
readme = "README.md"
authors = [
    { name = "Ivann KAMDEM", email = "kapoivha@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
insight = "insight:main"

[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"
